<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_menu_songs"
            android:title="@string/menu_songs" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_artists"
            android:title="@string/menu_artists" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_menu_genres"
            android:title="@string/menu_genres" />
        <item
            android:id="@+id/nav_chords"
            android:icon="@drawable/ic_menu_chords"
            android:title="@string/menu_chords" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />

    </group>

</menu>